created Checkout Component and route

--- a/src/Product.css
+++ b/src/Product.css
@@ -12,6 +12,10 @@
     z-index: 1;
 }
 
+.product_rating {
+    display: flex;
+}
+
 .product > img {
     max-height: 200px;
     width: 100%;
@@ -33,6 +37,7 @@
 }
 
 .product_info {
+
     height: 100px;
     margin-bottom: 15px;
 }
