--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -3,10 +3,11 @@
     padding: 20px;
     background-color: #fff;
     height: max-content;
+     
 }
 
 .checkout_ad {
-    margin-bottom: 10px;
+    width: 100%;
     margin-bottom: 10px;
 }
 
